Rewrite cape bridge runtime for 1.21.11 and cross-version support